# revolt_annex

./: .env  .gitignore  .slugignore  Dockerfile  Procfile  db.json  db.sqlite3  docker-compose.yml  manage.py  mydatabase  pyproject.toml  pyvenv.cfg  requirements.txt  vercel.json
Scripts/: EXIF.py  activate  activate.bat  dul-receive-pack  dul-upload-pack  requirements.txt
revolt_annex/: __init__.py  asgi.py  celery.py  custom_filters.py  database_router.py  settings.py  settings_dev.py  urls.py  wsgi.py
schedule/: __init__.py  admin.py  apps.py  archive_year_view_store.py  forms.py  models.py  signals.py  staging.py  taos-revolt-drive-0911d2bbf6a0.json  tasks.py  tests.py  urls.py  views.py
schedule/migrations/: 0001_initial.py  0002_alter_archivedshowimagedata_archive_show_name_and_more.py  0002_alter_archiveimagefiles_archive_fk.py  0002_archiveimagefiles_archive_img_height_and_more.py  0002_auto_20240102_1053.py  0002_delete_nearby_accomodations.py  0002_delete_vimeovideo.py  0002_member_delete_genre.py  0003_alter_archivedshowimagedata_archive_show_name.py  0003_alter_archiveimagefiles_archive_image.py  0003_archivedshowimagedata_archive_file_upload.py  0003_rename_member_artist.py  0003_visual_artist_listing_flyer_img_id_and_more.py  0004_alter_archivedshowimagedata_archive_show_name.py  0004_alter_archivedshowimagedata_options.py  0004_alter_visual_artist_listing_options.py  0004_artist_listing_delete_artist.py  0005_alter_archivedshowimagedata_archive_folder_id_and_more.py  0005_alter_archivedshowimagedata_options_and_more.py  0005_archivedresetdata.py  0005_artist_listing_artist_music.py  0006_alter_archivedresetdata_archive_reset_artist_web.py  0006_artist_listing_entry_price.py  0007_artist_listing_artist_insta_and_more.py  0007_remove_music_artist_listing_music_artist_image_and_more.py  (+34 more)
(+81 files in other folders)
